--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,4 @@ jobs:
             -Dsonar.projectBaseDir=.
             -Dsonar.projectKey=security-vulns-nodejs
             -Dsonar.organization=sonarsource
+            -Dsonar.host.url=https://dejansource.eu.ngrok.io
